--- a/css/index.css
+++ b/css/index.css
@@ -6,8 +6,7 @@
   box-sizing: border-box; }
 
 html {
-  font-size: 62.5%;
-  padding-top: 150px; }
+  font-size: 62.5%; }
 
 a {
   text-decoration: none; }
@@ -21,18 +20,20 @@ h1 {
 h2 {
   font-size: 3em; }
 
+.nav-link {
+  color: black; }
+
+.nav-link:hover {
+  color: white; }
+
 /* PARTIALS */
 body {
-  background: #188055;
-  background: linear-gradient(0deg, #188055 0%, #e7cc68 67%); }
+  /* background: rgb(24,128,85); */
+  background: linear-gradient(0deg, #188055 50%, #e7cc68 100%); }
 
 header {
   padding-top: 10px;
-  width: 100%;
-  left: 0;
-  top: 0;
-  position: fixed;
-  background-color: #e7cc68; }
+  width: 100%; }
 
 @keyframes fc_esculturas {
   0% {
@@ -53,6 +54,10 @@ header {
 .nav {
   justify-content: center;
   font-size: 1.5rem; }
+
+#nav-link-active {
+  background-color: red;
+  color: white; }
 
 footer {
   padding: 2rem;
@@ -80,6 +85,9 @@ footer {
 .position {
   width: 50%;
   margin: 50px auto 0; }
+
+#nav-link:active {
+  background-color: red; }
 
 #razas {
   display: grid;
@@ -118,7 +126,7 @@ footer {
   .clasificacionCanina .clasificacionCanina__razas--fci {
     font-size: 1.8em;
     font-family: Arial, Helvetica, sans-serif;
-    margin: 2rem; }
+    padding: 1.8rem; }
   .clasificacionCanina .clasificacionCanina__lista {
     font-size: 1.8em;
     font-family: cursive;
@@ -143,4 +151,4 @@ footer {
 .centrar {
   font-size: 2em;
   line-height: 3rem;
-  padding: 15rem; }
+  padding: 5rem; }
