--- a/scss/partials/_body.scss
+++ b/scss/partials/_body.scss
@@ -1,4 +1,4 @@
 body{
-    background: rgb(24,128,85);
-    background: linear-gradient(0deg, rgba(24,128,85,1) 0%, rgba(231,204,104,1) 67%);
+    /* background: rgb(24,128,85); */
+    background: linear-gradient(0deg, rgba(24,128,85,1) 50%, rgba(231,204,104,1) 100%);
 }
