--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,10 +1,6 @@
 header{
     padding-top: 10px;
     width: 100%;
-    left: 0;
-    top: 0;
-    position: fixed;
-    background-color: rgba(231,204,104,1);
     @keyframes fc_esculturas {
         0%{
             opacity: 0;
@@ -30,3 +26,9 @@ header{
     justify-content: center;
     font-size: 1.5rem;
 }
+
+#nav-link-active{
+    background-color: red;
+    color: white
+}
+
