--- a/scss/utils/_normalize.scss
+++ b/scss/utils/_normalize.scss
@@ -5,7 +5,6 @@
 }
 html{
     font-size: 62.5%;
-    padding-top: 150px;
 }
 
 a{
@@ -22,4 +21,12 @@ h1{
 
 h2{
     font-size: 3em;
+}
+
+.nav-link{
+    color: black;
+}
+
+.nav-link:hover{
+    color: white;
 }
