--- a/css/index.css
+++ b/css/index.css
@@ -126,7 +126,7 @@ footer {
   .clasificacionCanina .clasificacionCanina__razas--fci {
     font-size: 1.8em;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 1.8rem; }
+    padding-top: 1.8rem; }
   .clasificacionCanina .clasificacionCanina__lista {
     font-size: 1.8em;
     font-family: cursive;
