--- a/scss/pages/_razas.scss
+++ b/scss/pages/_razas.scss
@@ -4,7 +4,7 @@
     .clasificacionCanina__razas--fci{
         font-size: 1.8em;
         font-family: Arial, Helvetica, sans-serif;
-        padding: 1.8rem;
+        padding-top: 1.8rem;
     }
     .clasificacionCanina__lista{
         font-size: 1.8em;
